--- a/root/index.html
+++ b/root/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="E:\vs code\calculator\root\css\style.css">
+    <link rel="stylesheet" href="/css/style/css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200" rel="stylesheet">
-    <link rel="icon" href="E:\vs code\calculator\root\img\257791.png">
+    <link rel="icon" href="/img/257791.png">
     <title>KoushaDev calculator</title>
   </head>
   
@@ -55,7 +55,7 @@
       </div>
     </main>
     
-  <script src="E:\vs code\calculator\root\scripts\main.js"></script>
+  <script src="/scripts/main.js"></script>
   </body>
   
 </html>
