--- a/root/index.html
+++ b/root/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <link rel="stylesheet" href="/css/style/css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200" rel="stylesheet">
     <link rel="icon" href="/img/257791.png">
     <title>KoushaDev calculator</title>
